--- a/pom.xml
+++ b/pom.xml
@@ -21,36 +21,25 @@
     <description>Parent POM for multi-module modular monolithic architecture POC</description>
 
     <modules>
-        <module>product-module</module>
-        <module>order-module</module>
-        <module>payment-module</module>
         <module>application</module>
     </modules>
 
     <properties>
-        <java.version>25</java.version>
-        <maven.compiler.source>25</maven.compiler.source>
-        <maven.compiler.target>25</maven.compiler.target>
+        <java.version>21</java.version>
+        <maven.compiler.source>21</maven.compiler.source>
+        <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
     <dependencyManagement>
         <dependencies>
-            <!-- Internal Module Dependencies -->
+            <!-- Spring Modulith BOM -->
             <dependency>
-                <groupId>com.demo</groupId>
-                <artifactId>product-module</artifactId>
-                <version>${project.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.demo</groupId>
-                <artifactId>order-module</artifactId>
-                <version>${project.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.demo</groupId>
-                <artifactId>payment-module</artifactId>
-                <version>${project.version}</version>
+                <groupId>org.springframework.modulith</groupId>
+                <artifactId>spring-modulith-bom</artifactId>
+                <version>1.2.3</version>
+                <type>pom</type>
+                <scope>import</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -77,8 +66,8 @@
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
                     <configuration>
-                        <source>25</source>
-                        <target>25</target>
+                        <source>21</source>
+                        <target>21</target>
                         <annotationProcessorPaths>
                             <path>
                                 <groupId>org.projectlombok</groupId>
