Update project to integrate jMolecules DDD annotations, temporarily disable Spring Modulith modules due to Java 25 compatibility issues, and enhance architecture tests for DDD compliance.

--- a/application/src/main/resources/application.properties
+++ b/application/src/main/resources/application.properties
@@ -24,6 +24,7 @@ logging.level.com.demo.modular=DEBUG
 
 # Spring Modulith Configuration
 spring.modulith.detection-strategy=explicitly-annotated
+spring.modulith.runtime.enabled=false
 
 # Actuator Configuration for Modulith and Resilience4j
 management.endpoints.web.exposure.include=health,info,modulith,metrics,prometheus,circuitbreakers,circuitbreakerevents,ratelimiters,retries
