--- a/application/pom.xml
+++ b/application/pom.xml
@@ -38,7 +38,8 @@
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
 
-        <!-- Spring Modulith Dependencies -->
+        <!-- Spring Modulith Dependencies - Temporarily disabled due to Java 25 compatibility issues -->
+        <!--
         <dependency>
             <groupId>org.springframework.modulith</groupId>
             <artifactId>spring-modulith-starter-core</artifactId>
@@ -58,11 +59,15 @@
             <groupId>org.springframework.modulith</groupId>
             <artifactId>spring-modulith-observability</artifactId>
         </dependency>
+        -->
 
+        <!-- Temporarily disabled due to Java 25 compatibility issues with ArchUnit -->
+        <!--
         <dependency>
             <groupId>org.springframework.modulith</groupId>
             <artifactId>spring-modulith-runtime</artifactId>
         </dependency>
+        -->
 
         <!-- Spring Modulith Testing & Documentation -->
         <dependency>
@@ -128,8 +133,29 @@
         <dependency>
             <groupId>com.tngtech.archunit</groupId>
             <artifactId>archunit-junit5</artifactId>
-            <version>1.3.0</version>
+            <version>1.4.1</version>
             <scope>test</scope>
+        </dependency>
+
+        <!-- jMolecules DDD annotations -->
+        <dependency>
+            <groupId>org.jmolecules</groupId>
+            <artifactId>jmolecules-ddd</artifactId>
+            <version>${jmolecules.version}</version>
+        </dependency>
+
+        <!-- jMolecules ArchUnit integration -->
+        <dependency>
+            <groupId>org.jmolecules.integrations</groupId>
+            <artifactId>jmolecules-archunit</artifactId>
+            <version>0.19.0</version>
+            <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.tngtech.archunit</groupId>
+                    <artifactId>archunit</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
 
